tdf#90408 Revert #i79169# save/apply attributes of macrobutton text

This reverts ancient commit a79a0101f114e0fcac40503220c5d34750124367.

I'm not sure what problem it was trying to solve,
but it doesn't seem necessary now.
At least, I took my unit test and set some different
font sizes to them, and they correctly got those attributes.

This was the original file that needed to be fixed:
make CppunitTest_sw_ww8export4 CPPUNIT_TEST_NAME=testTdf90408

This is for the current bug report:
make CppunitTest_sw_ww8export4 CPPUNIT_TEST_NAME=testTdf90408B

Change-Id: I09fb3bd12d645318f1024ac78a9b3154a1fcd078
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152025
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>